--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TASK</title>
+    <link href="css/styles.css" rel="stylesheet" />
   </head>
   <body>
     <ul id="categories">
@@ -38,6 +39,17 @@
         </ul>
       </li>
     </ul>
-    <script src="js/task-1.js" type="module"></script>
+    <ul id="ingredients"></ul>
+    <ul id="gallery"></ul>
+
+    <div id="counter">
+      <button type="button" data-action="decrement">-1</button>
+      <span id="value">0</span>
+      <button type="button" data-action="increment">+1</button>
+    </div>
+    <script src="js/task-1.js"></script>
+    <script src="js/task-2.js"></script>
+    <script src="js/task-3.js"></script>
+    <script src="js/task-4.js"></script>
   </body>
 </html>
