--- a/index.html
+++ b/index.html
@@ -39,17 +39,53 @@
         </ul>
       </li>
     </ul>
+
+    <!-- Завдання 2 -->
+    <h2>Завдання 2</h2>
     <ul id="ingredients"></ul>
+
+    <!-- Завдання 3 -->
+    <h2>Завдання 3</h2>
     <ul id="gallery"></ul>
 
+    <!-- Завдання 4 -->
+    <h2>Завдання 4</h2>
     <div id="counter">
-      <button type="button" data-action="decrement">-1</button>
+      <button type="button" class="decrement" data-action="decrement">
+        -1
+      </button>
       <span id="value">0</span>
-      <button type="button" data-action="increment">+1</button>
+      <button type="button" class="increment" data-action="increment">
+        +1
+      </button>
     </div>
+
+    <!-- Завдання 5 -->
+    <h2>Завдання 5</h2>
+    <input type="text" placeholder="Ваше имя?" id="name-input" />
+    <h1>Привет, <span id="name-output">незнакомец</span>!</h1>
+
+    <!-- Завдання 6 -->
+    <h2>Завдання 6</h2>
+    <input
+      type="text"
+      id="validation-input"
+      data-length="6"
+      placeholder="Введи 6 символов"
+    />
+
+    <!-- Завдання 7 -->
+    <h2>Завдання 7</h2>
+    <input id="font-size-control" type="range" />
+    <br />
+    <span id="text">Абракадабра!</span>
+
     <script src="js/task-1.js"></script>
     <script src="js/task-2.js"></script>
     <script src="js/task-3.js"></script>
     <script src="js/task-4.js"></script>
+    <script src="js/task-5.js"></script>
+    <script src="js/task-6.js"></script>
+    <script src="js/task-7.js"></script>
   </body>
 </html>
